--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.1",
+    "@splinetool/react-spline": "^4.0.0",
+    "animate.css": "^4.1.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17"
   }
 }
