--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^7.0.1",
     "@splinetool/react-spline": "^4.0.0",
     "animate.css": "^4.1.1",
+    "framer-motion": "^12.6.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
