--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/styled-engine-sc": "^7.0.1",
     "@splinetool/react-spline": "^4.0.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.8.4",
+    "mongoose": "^8.13.2",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
